--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,12 @@
-<footer class="page-footer">
+<footer class="global-footer">
 
   <div class="footer-content">
-    <div class="footer-brand-outer-wrapper">
-      <div class="footer-brand-inner-wrapper">
+    <div class="footer-row">
+      <div class="footer-brand-col">
         <a href="/">Skylight</a>
       </div>
 
-      <nav class="footer-nav">
+      <nav class="footer-nav-col">
         <ul>
           <li><a href="/guilds/">Guilds</a></li>
           <li><a href="/guides/">Guides</a></li>
@@ -17,14 +17,14 @@
       </nav>
     </div>
 
-    <div class="footer-contribute-cta-wrapper">
-      <div class="footer-contribute-cta">
+    <div class="footer-row">
+      <div class="footer-contribute-cta-col">
         <a href="{{site.github_issues_url}}" role="button" target="_blank">
           Report a bug with the site
         </a>
       </div>
 
-      <div class="footer-socials">
+      <div class="footer-socials-col">
         <a href="{{site.twitter_url}}" target="_blank">
           <span class="sr-only">Twitter</span>
           <i class="fa fa-2x fa-twitter" aria-hidden="true" title="Twitter"></i>
