--- a/_includes/service_area.html
+++ b/_includes/service_area.html
@@ -13,9 +13,9 @@
         col_size = 3
       %}
 
-      <div class="service-elements {{hanging_col_size_css_class}}">
+      <div class="service-elements-row {{hanging_col_size_css_class}}">
         {% for service_element in service_elements %}
-          <div class="service-element">
+          <div class="service-element-col">
             <div class="service-element-content-box">
               <h3>{{service_element.name}}</h3>
               <p>{{service_element.description}}</p>
