--- a/_includes/testimonial_cta.html
+++ b/_includes/testimonial_cta.html
@@ -1,9 +1,7 @@
-<div class="page-cta">
-
+<div class="page-subfooter">
   <div class="container">
-
-    <div class="testimonial-wrapper">
-      <div class="testimonial">
+    <div class="testimonial-row">
+      <div class="testimonial-col">
         <blockquote>
           <p class="testimonial-quote">
             You would be hard pressed to find a greater assemblage of digital talent.
@@ -17,7 +15,5 @@
         </blockquote>
       </div>
     </div>
-
   </div>
-
 </div>
