--- a/_layouts/policy.html
+++ b/_layouts/policy.html
@@ -7,7 +7,7 @@ layout: default
 <div class="policy">
   <div class="container">
     <div class="row">
-      <div class="policy-content">
+      <div class="policy-content-col">
         {{content}}
       </div>
     </div>
