--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -152,6 +152,7 @@ $font-size-h6: 2rem;
 $font-weight-normal: 400;
 $font-weight-bold: 700;
 
+$headings-margin-bottom: 0;
 $headings-font-weight: 700;
 
 $lead-font-weight: 100;
