--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,26 +1,24 @@
-<div class="container">
-  <header role="banner">
-    <nav class="navbar">
-      <div class="navbar-brand-toggler-wrapper">
-        <h1><a href="/">Skylight</a></h1>
+<header class="global-header" role="banner">
+  <nav class="navbar">
+    <div class="navbar-flex-container">
+      <h1><a class="navbar-logo" href="/">Skylight</a></h1>
 
-        <div class="navbar-toggler" role="button" data-toggle="collapse" data-target="#navbar-nav-collapsible" aria-controls="navbar-nav-collapsible" aria-expanded="false">
-          <span class="sr-only">Toggle Navigation</span>
-          <i class="fa fa-bars fa-lg" aria-hidden="true"></i>
-        </div>
+      <div class="navbar-toggler" role="button" data-toggle="collapse" data-target="#navbar-nav-collapsible" aria-controls="navbar-nav-collapsible" aria-expanded="false">
+        <span class="sr-only">Toggle Navigation</span>
+        <i class="fa fa-bars fa-lg" aria-hidden="true"></i>
       </div>
+    </div>
 
-      <div id="navbar-nav-collapsible" class="navbar-nav-collapsible">
-        <ul class="navbar-nav">
-          <li><a href="/about/"><span>About</span></a></li>
-          <li><a href="/services/"><span>Services</span></a></li>
-          <li><a href="/work/"><span>Work</span></a></li>
-          <li><a href="/culture/"><span>Culture</span></a></li>
-          <li><a href="/join/"><span>Join Us</span></a></li>
-          <li><a href="/blog/"><span>Blog</span></a></li>
-          <li><a href="/hire-us/"><span>Hire Us</span></a></li>
-        </ul>
-      </div>
-    </nav>
-  </header>
-</div>
+    <div id="navbar-nav-collapsible" class="navbar-nav-collapsible">
+      <ul class="navbar-nav">
+        <li class="nav-item"><a class="nav-link" href="/about/"><span>About</span></a></li>
+        <li class="nav-item"><a class="nav-link" href="/services/"><span>Services</span></a></li>
+        <li class="nav-item"><a class="nav-link" href="/work/"><span>Work</span></a></li>
+        <li class="nav-item"><a class="nav-link" href="/culture/"><span>Culture</span></a></li>
+        <li class="nav-item"><a class="nav-link" href="/join/"><span>Join Us</span></a></li>
+        <li class="nav-item"><a class="nav-link" href="/blog/"><span>Blog</span></a></li>
+        <li class="nav-item"><a class="nav-link" href="/hire-us/"><span>Hire Us</span></a></li>
+      </ul>
+    </div>
+  </nav>
+</header>
