--- a/_sass/_spacing.scss
+++ b/_sass/_spacing.scss
@@ -1,37 +1,40 @@
-.mt-6 { @include mt-6; }
-.mt-7 { @include mt-7; }
+%mt-6 { @include mt-6; }
+%mt-7 { @include mt-7; }
 
-.mb-6 { @include mb-6; }
-.mb-7 { @include mb-7; }
+%mb-6 { @include mb-6; }
+%mb-7 { @include mb-7; }
 
-.px-6 {
-  padding-left: 4rem !important;
-  padding-right: 4rem !important;
+%px-6 {
+  @include pl-6;
+  @include pr-6;
 }
 
 @include media-breakpoint-down(sm) {
-  .mb-sm-down-3 { margin-bottom: 1rem !important; }
-  .mb-sm-down-4 { margin-bottom: 1.5rem !important; }
-  .mb-sm-down-5 { margin-bottom: 3rem !important; }
+  %mb-sm-down-3 { @include mb-3; }
+  %mb-sm-down-4 { @include mb-4; }
+  %mb-sm-down-5 { @include mb-5; }
 }
 
 @include media-breakpoint-down(md) {
-  .px-md-down-2 {
-    padding-left: .5rem !important;
-    padding-right: .5rem !important;
+  %mb-md-down-0 { @include mb-0; }
+  %mb-md-down-3 { @include mb-3; }
+
+  %px-md-down-2 {
+    @include pl-2;
+    @include pr-2;
   }
 }
 
 @include media-breakpoint-up(md) {
-  .mt-md-6 { @include mt-6; }
-  .mt-md-7 { @include mt-7; }
-  .mt-md-8 { @include mt-8; }
+  %mt-md-6 { @include mt-6; }
+  %mt-md-7 { @include mt-7; }
+  %mt-md-8 { @include mt-8; }
 
-  .mb-md-6 { @include mb-6; }
-  .mb-md-7 { @include mb-7; }
-  .mb-md-10 { @include mb-10; }
+  %mb-md-6 { @include mb-6; }
+  %mb-md-7 { @include mb-7; }
+  %mb-md-10 { @include mb-10; }
 
-  .py-md-6 {
+  %py-md-6 {
     @include pt-6;
     @include pb-6;
   }
