--- a/_sass/pages/_blog.scss
+++ b/_sass/pages/_blog.scss
@@ -2,9 +2,9 @@
   @extend %page-main-base;
 }
 
-.blog-posts {
-  @extend .row;
+.blog-posts-row {
+  @extend %row;
 }
 
 @include semantic-card('blog-post');
-@include multi-col-spacing('blog-post', $mb-size: 4, $mb-md-size: 5);
+@include multi-col-spacing('blog-post-col', $mb-size: 4, $mb-md-size: 5);
