--- a/_sass/pages/_culture.scss
+++ b/_sass/pages/_culture.scss
@@ -2,28 +2,28 @@
   @extend %page-main-base;
 }
 
-.values {
-  @extend .row;
+.values-row {
+  @extend %row;
 }
 
-.value {
-  @extend .col-11;
-  @extend .col-md-6;
-  @extend .mb-5;
+.value-col {
+  @extend %col-11;
+  @extend %col-md-6;
+  @extend %mb-5;
 
   &:last-child {
-    @extend .mb-0;
+    @extend %mb-0;
   }
 
   &:nth-last-of-type(1),
   &:nth-last-of-type(2) {
-    @extend .mb-md-0;
+    @extend %mb-md-0;
   }
 }
 
 .value-card {
-  @extend .card;
-  @extend .text-left;
+  @extend %card;
+  @extend %text-left;
   border: 0;
   border-left: 14px solid $brand-primary;
   border-radius: 0;
@@ -31,17 +31,17 @@
 }
 
 .value-block {
-  @extend .card-block;
+  @extend %card-block;
   padding: .5rem 1.25rem 1.25rem;
 
   h3 {
-    @extend .card-title;
-    @extend .mb-3;
+    @extend %card-title;
+    @extend %mb-3;
     font-size: $font-size-x-large;
   }
 
   p {
-    @extend .card-text;
+    @extend %card-text;
     font-size: $font-size-small;
   }
 }
