--- a/_sass/pages/_service_area.scss
+++ b/_sass/pages/_service_area.scss
@@ -2,30 +2,30 @@
   @extend %page-main-base;
 }
 
-.service-elements {
-  @extend .row;
+.service-elements-row {
+  @extend %row;
 }
 
-.service-element {
-  @extend .col-11;
-  @extend .col-md-4;
-  @extend .mx-auto;
+.service-element-col {
+  @extend %col-11;
+  @extend %col-md-4;
+  @extend %mx-auto;
 }
 
-@include multi-col-spacing("service-element", $mb-size: 5, $mb-md-size: 5);
+@include multi-col-spacing('service-element-col', $mb-size: 5, $mb-md-size: 5);
 
 .service-element-content-box {
-  @extend .text-left;
+  @extend %text-left;
   border-top: 1px solid $gray-lightest;
   width: 90%;
 
   h3 {
-    @extend .my-3;
-    @extend .text-uppercase;
+    @extend %my-3;
+    @extend %text-uppercase;
     font-size: $font-size-small;
   }
 
   p {
-    @extend .mb-0;
+    @extend %mb-0;
   }
 }
